finally realized my background images were just too big, causing massive lag. I've fixed it by reducing the image file to less than 1/10 of its original size

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
   /* --main-blue: #272727; */
-  --main-blue: rgb(170, 170, 170);
+  --main-blue: white;
   /* --main-green: rgb(0, 161, 0); */
   --main-green: rgb(0, 110, 255);
   --light-green: #50d799;
@@ -16,6 +16,10 @@
   font-family: 'Raleway', sans-serif;
   /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif; */
+}
+
+body, html {
+  height: 100%;
 }
 
 .App-logo {
@@ -36,10 +40,11 @@
 
 .parallax {
   /* The image used */
-  background-image: url("./imgs/openSign.jpg");
+  background-image: url('./imgs/newdesktop.JPG');
+
 
   /* Full height */
-  height: 100%; 
+  height: 80%; 
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -68,9 +73,8 @@
   /* background-color: var(--main-blue); */
   /* height: 100%; */
   /* background-image: linear-gradient(var(--main-green), rgb(255, 255, 255)); */
-  width: 72%;
-
-  
+  width: 100%;
+   
 }
 
 .asideLeft {
@@ -276,8 +280,8 @@
 }
 
 .BioMain .card1 p {
-  display: inline;
-  text-align: right;
+  /* display: inline; */
+  text-align: center;
   font-weight: 400;
   font-size:larger;
   color: var(--textGrey);
